# Solutions-to-30-Days-Of-Python

./: .gitignore  .jupyterlite.doit.db  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  JUPYTERLITE_BUILD_PROCESS.md  JUPYTERLITE_INTEGRATION.md  Makefile  README.md  TODO.md  investigate_tables.py  jupyter_lite_config.json  mkdocs-enhanced.yml  mkdocs.yml  numpy.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
.binder/: requirements.txt  start
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  labeler.yml
01_Day_Introduction/: README.md  helloworld.py
02_Day_Variables_builtin_functions/: 02_Day_Variables_builtin_functions.md  02_variables_builtin_functions.md  variables.py
03_Day_Operators/: 03_operators.md  operators.py
04_Day_Strings/: 04_strings.md  strings.py
05_Day_Lists/: 05_lists.md  README.md  lists.py  solutions.py
06_Day_Tuples/: 06_tuples.md  tuples.py
07_Day_Sets/: 07_sets.md  sets.py  solutions.py
08_Day_Dictionaries/: 08_dictionaries.md  dictionaries.py
09_Day_Conditionals/: 09_conditionals.md  README.md  conditionals.py  solutions.py
10_Day_Loops/: 10_loops.md  loops.py  solutions.py
11_Day_Functions/: 11_functions.md  functions.py  solutions.py
12_Day_Modules/: 12_modules.md  finance_tools.py  modules.py  solutions.py
13_Day_List_comprehension/: 13_list_comprehension.md  list_comprehension.py
14_Day_Higher_order_functions/: 14_higher_order_functions.md  HOF.py  solutions.py
15_Day_NumPy/: numpy_examples.py
15_Day_Python_type_errors/: 15_python_type_errors.md
(+1776 files in other folders)
